force-app/main/default/objects/Master_Map__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Map_Set__c</fullName>
        <label>Master Map Set</label>
        <referenceTo>Master_Map_Set__c</referenceTo>
        <relationshipLabel>Master Maps</relationshipLabel>
        <relationshipName>Master_Maps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RelatedMasterMap1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedMasterMap1</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Master Maps</relationshipLabel>
        <relationshipName>Master_Maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelatedMasterMap2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedMasterMap2</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Master Maps (RelatedMasterMap2)</relationshipLabel>
        <relationshipName>Master_Maps2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelatedMasterMap3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedMasterMap3</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Master Maps (RelatedMasterMap3)</relationshipLabel>
        <relationshipName>Master_Maps3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Group__c</fullName>
        <label>Sales Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SalesGroup</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Master_Map</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SearchTerm1__c</fullName>
        <label>Search Term 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SearchTerm2__c</fullName>
        <label>Search Term 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SearchTerm3__c</fullName>
        <label>Search Term 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Number__c</fullName>
        <label>Status Number</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Master Map</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Description__c</columns>
        <columns>Type__c</columns>
        <columns>RelatedMasterMap1__c</columns>
        <columns>RelatedMasterMap2__c</columns>
        <columns>Status_Number__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Sales_Group__c</columns>
        <columns>Sales_Rep__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>contains</operation>
            <value>Industry</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Code_Group</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Description__c</columns>
        <columns>Type__c</columns>
        <columns>RelatedMasterMap1__c</columns>
        <columns>RelatedMasterMap2__c</columns>
        <columns>Status_Number__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Code Group</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>IEO</value>
        </filters>
        <label>Code Group</label>
    </listViews>
    <listViews>
        <fullName>Country</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Description__c</columns>
        <columns>Type__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Country</value>
        </filters>
        <label>Country</label>
    </listViews>
    <listViews>
        <fullName>Fault_Code</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>FaultCode</value>
        </filters>
        <label>Fault Code</label>
    </listViews>
    <listViews>
        <fullName>Material_Group</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Description__c</columns>
        <columns>Type__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Payment Term</value>
        </filters>
        <label>Material Group</label>
    </listViews>
    <listViews>
        <fullName>Material_Plant</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Description__c</columns>
        <columns>Type__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Material Plant</value>
        </filters>
        <label>Material Plant</label>
    </listViews>
    <listViews>
        <fullName>Payment_Term</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Description__c</columns>
        <columns>Type__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Payment Term</value>
        </filters>
        <label>Payment Term</label>
    </listViews>
    <listViews>
        <fullName>Province</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Description__c</columns>
        <columns>Type__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Province</value>
        </filters>
        <label>Province</label>
    </listViews>
    <listViews>
        <fullName>SalesMapwithSalesGroup</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Sales_Rep__c</columns>
        <columns>Sales_Group__c</columns>
        <columns>Type__c</columns>
        <columns>Description__c</columns>
        <columns>Status_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>SalesMapwithSalesGroup</value>
        </filters>
        <label>SalesMapwithSalesGroup</label>
    </listViews>
    <listViews>
        <fullName>Sales_Document_Type</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Description__c</columns>
        <columns>Type__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Sales Document Type</value>
        </filters>
        <label>Sales Document Type</label>
    </listViews>
    <listViews>
        <fullName>Transportation_Zone</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Description__c</columns>
        <columns>Type__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Transportation Zone</value>
        </filters>
        <label>Transportation Zone</label>
    </listViews>
    <nameField>
        <label>Master Map Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>